# gvtop

./: README.md  WINDOWS_TESTING.md  pyproject.toml  test.cmd
gvtop/: gvtop.py  utils.py  windows_terminal.py
gvtop/themes/: amber.py  amethyst.py  citrine.py  dark_amber.py  dark_amethyst.py  dark_citrine.py  dark_emerald.py  dark_jade.py  dark_quartz.py  dark_ruby.py  dark_sapphire.py  dark_spinel.py  dark_topaz.py  emerald.py  jade.py  light_amber.py  light_amethyst.py  light_citrine.py  light_emerald.py  light_jade.py  light_quartz.py  light_ruby.py  light_sapphire.py  light_spinel.py  light_topaz.py  quartz.py  ruby.py  sapphire.py  spinel.py  topaz.py
