[project]
name = "gvtop"
version = "0.0.1"
description = "🎮 Material You TUI for monitoring NVIDIA GPUs"
dependencies = [
    "pynvml",
    "psutil",
    "urwid",
    "wmi; platform_system == 'Windows'",
    "blessed; platform_system != 'Windows'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gvtop"]

[project.scripts]
gvtop = "gvtop.gvtop:main"
