[project]
name = "gvtop"
version = "0.0.1"
description = "🎮 Material You TUI for monitoring NVIDIA GPUs"
dependencies = [
    "pynvml",
    "psutil",
    "colorama>=0.4.6"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gvtop"]

[project.scripts]
gvtop = "gvtop.gvtop:main"
